--- a/functionTester.html
+++ b/functionTester.html
@@ -40,7 +40,7 @@
 	});*/
 	var x = 0;
 	var y = 0;
-	var MAX = 1000;
+	var MAX = 300;
 	function animate() {
 		if (MAX > 0);
 		requestAnimationFrame(animate);
@@ -56,7 +56,7 @@
 		//if (tx < Math.PI/2 - 1)
 		drawRaw(x, y);
 		x+= 0.01;
-		y = x%(2)-1	
+		y = Math.random()*2-1	
 	}
 	function draw(x,y) {
 		
